--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,7 @@ body {
 
   .cart-item:hover {
     background-color: #f0f0f0;
-    cursor: pointer; 
+   
   }
 
 
@@ -93,6 +93,7 @@ body {
 
   
   .cart-item-actions {
+    margin-left: 10px;
     display: flex;
     align-items: center;
   }
